--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -3,19 +3,21 @@ ip: "192.168.10.10"
 memory: 2048
 cpus: 1
 
-authorize: /Users/me/.ssh/id_rsa.pub
+authorize: ~/.ssh/id_rsa.pub
 
 keys:
-    - /Users/me/.ssh/id_rsa
+    - ~/.ssh/id_rsa
 
 folders:
-    - map: /Users/me/Code
-      to: /home/vagrant/Code
+    - map: OPTIMIND_SITE
+      to: /home/vagrant/optimind-site
 
 sites:
-    - map: homestead.app
-      to: /home/vagrant/Code/Laravel/public
+    - app: optimind.app
+      folder: /home/vagrant/optimind-site
+      conf: /home/vagrant/optimind-site/config/nginx/optimus-dev.conf
+      ssl: /home/vagrant/optimind-site/config/ssl
 
 variables:
-    - key: APP_ENV
+    - key: LARAVEL_ENV
       value: local
