--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -1,5 +1,5 @@
 ---
-ip: "192.168.10.10"
+ip: "192.168.115.10"
 memory: 2048
 cpus: 1
 
@@ -13,6 +13,8 @@ folders:
       to: /home/vagrant/optimind-site
     - map: BEANSTALK_CONSOLE
       to: /home/vagrant/beanstalk_console
+    - map: OPTIMIND_BLOG
+      to: /home/vagrant/optimind-blog
 
 sites:
     - app: optimind.app
